Convert to Maven plugin